@@ -177,6 +177,13 @@ javaModulePackaging {
             // Needs to be listed everyhwere, because of https://github.com/gradlex-org/java-module-packaging/issues/104
             "--license-file", "$projectDir/buildres/LICENSE_with_Privacy.md",
 
+            // The two-step packaging (app-image, then deb/rpm/msi from it) does not pass these on.
+            // Without "--name", jpackage silently ignores "--file-associations".
+            // https://github.com/JabRef/jabref/issues/17006
+            "--name", applicationName.get(),
+            "--description", applicationDescription.get(),
+            "--vendor", vendor.get(),
+
             // Generic options, but different for each target
             "--icon", "$projectDir\\buildres\\windows\\JabRef.ico",
             "--file-associations", "$projectDir\\buildres\\windows\\bibtexAssociations.properties",
@@ -207,6 +214,13 @@ javaModulePackaging {
         options.addAll(
             // Needs to be listed everyhwere, because of https://github.com/gradlex-org/java-module-packaging/issues/104
             "--license-file", "$projectDir/buildres/LICENSE_with_Privacy.md",
+
+            // The two-step packaging (app-image, then deb/rpm/msi from it) does not pass these on.
+            // Without "--name", jpackage silently ignores "--file-associations".
+            // https://github.com/JabRef/jabref/issues/17006
+            "--name", applicationName.get(),
+            "--description", applicationDescription.get(),
+            "--vendor", vendor.get(),
 
             // Generic options, but different for each target
             "--icon", "$projectDir/buildres/linux/JabRef.png",
@@ -307,6 +321,10 @@ tasks.test {
     systemProperty("glass.platform", "Headless")
     systemProperty("prism.order", "sw")
 
+    useJUnitPlatform {
+        excludeTags("ExternalServicesTest")
+    }
+
     jvmArgs = listOf(
         "-javaagent:${configurations.mockitoAgent.get().asPath}",
 
@@ -318,6 +336,26 @@ tasks.test {
         // "--add-reads", "org.jabref=wiremock"
     ) + useLibericaJdkFullJvmArgs
 
+    maxParallelForks = 1
+}
+
+val testSourceSet = sourceSets.test.get()
+
+tasks.register<Test>("externalServicesTest") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    testClassesDirs = testSourceSet.output.classesDirs
+    classpath = testSourceSet.runtimeClasspath
+    useJUnitPlatform {
+        includeTags("ExternalServicesTest")
+    }
+    systemProperty("glass.platform", "Headless")
+    systemProperty("prism.order", "sw")
+    jvmArgs = listOf(
+        "-javaagent:${configurations.mockitoAgent.get().asPath}",
+        "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
+        "--add-opens", "java.base/java.nio=org.apache.pdfbox.io",
+        "--enable-native-access=javafx.graphics,com.sun.jna"
+    ) + useLibericaJdkFullJvmArgs
     maxParallelForks = 1
 }
 
